Actually implement the test layer, and prove it works with some tests

--- a/package.json
+++ b/package.json
@@ -5,16 +5,12 @@
   "main": "lib/main/index.js",
   "scripts": {
     "clean": "rm -rf lib",
-
     "compile": "babel src/main -d lib/main",
-
     "test-compile": "babel src/test -d lib/test",
     "pretest-compile": "npm run compile",
     "preunittest": "npm run test-compile",
     "unittest": "mocha -G --recursive --require lib/test/setup lib/test",
-
     "lint": "eslint src",
-
     "test": "npm run lint && npm run unittest"
   },
   "repository": {
@@ -39,5 +35,8 @@
     "chai-as-promised": "^5.2.0",
     "eslint": "^1.10.3",
     "mocha": "^2.4.5"
+  },
+  "dependencies": {
+    "request": "^2.69.0"
   }
 }
