--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "devDependencies": {
     "babel-cli": "^6.4.5",
     "babel-eslint": "^4.1.8",
-    "babel-preset-es2015-node5": "^1.1.2",
+    "babel-preset-es2015": "^6.3.13",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.2.0",
     "eslint": "^1.10.3",
@@ -41,6 +41,6 @@
     "request": "^2.69.0"
   },
   "engines": {
-    "node": ">=5.0.0"
+    "node": ">=4.0.0"
   }
 }
