Added test for running an Express Server with GraphQL support

--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "chai": "^3.5.0",
     "chai-as-promised": "^5.2.0",
     "eslint": "^1.10.3",
+    "express": "^4.13.4",
+    "express-graphql": "^0.4.9",
     "graphql": "^0.4.16",
     "hapi": "^13.0.0",
     "hapi-graphql": "^0.4.0",
