--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "graphql-tester",
   "version": "0.0.4",
-  "description": "Module for writing fluent tests against a GraphQL API",
+  "description": "Test Framework for executing integration tests against GraphQL Services",
   "main": "lib/main/index.js",
   "scripts": {
     "clean": "rm -rf lib",
